--- a/view/frontend/layout/htmlsitemap_cms_page_page.xml
+++ b/view/frontend/layout/htmlsitemap_cms_page_page.xml
@@ -21,7 +21,7 @@
                 <argument name="crumbInfo" xsi:type="array">
                     <item name="title" xsi:type="string" translate="true">Sitemap</item>
                     <item name="label" xsi:type="string" translate="true">Sitemap</item>
-                    <item name="link" xsi:type="string">{{baseUrl}}/htmlsitemap</item>
+                    <item name="link" xsi:type="string">{{baseUrl}}htmlsitemap</item>
                 </argument>
             </action>
             <action method="addCrumb">
