--- a/view/frontend/templates/header_link.phtml
+++ b/view/frontend/templates/header_link.phtml
@@ -4,23 +4,18 @@
  * Please visit Magefan.com for license details (https://magefan.com/end-user-license-agreement).
  */
 
-/**
- * @var $block \Magefan\HtmlSitemap\Block\Link
- */
-?>
+use Magefan\HtmlSitemap\Block\Link;
+use Magento\Framework\Escaper;
 
-<?php
-$objectManager = \Magento\Framework\App\ObjectManager::getInstance();
-$config = $objectManager->create(\Magefan\HtmlSitemap\Model\Config::class);
-$displayInArray = explode(',', $config->displayIn());
-$openLinks = ($block->getOpenLinks() == 1) ? '' : 'target="_blank"';
+/** @var Link $block */
+/** @var Escaper $escaper */
+
+$openLinks = $block->getOpenLinks() == 1 ? '' : 'target="_blank"';
 ?>
-<?php if ($config->isEnabled()): ?>
-    <?php if (in_array('1', $displayInArray)): ?>
+<?php if ($block->canShowSitemapLink()): ?>
     <li>
-        <a href="<?= $block->escapeUrl($block->getHref()) ?>" name="header_htmlsitemap_link" <?= $openLinks ?>>
-            <?= $block->escapeHtml($block->getLabel()) ?>
+        <a href="<?= $escaper->escapeUrl($block->getHref()) ?>" name="header_htmlsitemap_link" <?= $openLinks ?>>
+            <?= $escaper->escapeHtml($block->getLabel()) ?>
         </a>
     </li>
-    <?php endif ?>
 <?php endif ?>
