--- a/view/frontend/layout/htmlsitemap_catalog_categories.xml
+++ b/view/frontend/layout/htmlsitemap_catalog_categories.xml
@@ -5,7 +5,7 @@
  * Please visit Magefan.com for license details (https://magefan.com/end-user-license-agreement).
  */
 -->
-<page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
         <referenceBlock name="breadcrumbs">
             <action method="addCrumb">
@@ -25,18 +25,16 @@
                 </argument>
             </action>
             <action method="addCrumb">
-                <argument name="crumbName" xsi:type="string" translate="true">AdditionalLincs</argument>
+                <argument name="crumbName" xsi:type="string" translate="true">Categories</argument>
                 <argument name="crumbInfo" xsi:type="array">
-                    <item name="title" xsi:type="string" translate="true">Additional Links</item>
-                    <item name="label" xsi:type="string" translate="true">Additional Links</item>
+                    <item name="title" xsi:type="string" translate="true">Categories</item>
+                    <item name="label" xsi:type="string" translate="true">Categories</item>
                 </argument>
             </action>
         </referenceBlock>
-
 		<referenceContainer name="content">
             <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
-			<!--<block class="Magefan\HtmlSitemap\Block\Additional\List" name="additional.list" template="Magefan_HtmlSitemap::additional/list.phtml"/>-->
-			<block as="additional_additional" class="Magefan\HtmlSitemap\Block\Additional\Links" name="additional.links" template="Magefan_HtmlSitemap::additional/links.phtml"/>
+			<block as="catalog_category" class="Magefan\HtmlSitemap\Block\Catalog\Categories" name="catalog.category" template="Magefan_HtmlSitemap::catalog/categories.phtml"/>
 		</referenceContainer>
 	</body>
 </page>
