--- a/view/frontend/layout/htmlsitemap_cms_pages.xml
+++ b/view/frontend/layout/htmlsitemap_cms_pages.xml
@@ -7,34 +7,9 @@
 -->
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<body>
-		<referenceBlock name="breadcrumbs">
-            <action method="addCrumb">
-                <argument name="crumbName" xsi:type="string" translate="true">Home</argument>
-                <argument name="crumbInfo" xsi:type="array">
-                    <item name="title" xsi:type="string" translate="true">Home</item>
-                    <item name="label" xsi:type="string" translate="true">Home</item>
-                    <item name="link" xsi:type="string">{{baseUrl}}</item>
-                </argument>
-            </action>
-            <action method="addCrumb">
-                <argument name="crumbName" xsi:type="string" translate="true">Sitemap</argument>
-                <argument name="crumbInfo" xsi:type="array">
-                    <item name="title" xsi:type="string" translate="true">Sitemap</item>
-                    <item name="label" xsi:type="string" translate="true">Sitemap</item>
-                    <item name="link" xsi:type="string">{{baseUrl}}htmlsitemap</item>
-                </argument>
-            </action>
-            <action method="addCrumb">
-                <argument name="crumbName" xsi:type="string" translate="true">Pages</argument>
-                <argument name="crumbInfo" xsi:type="array">
-                    <item name="title" xsi:type="string" translate="true">Pages</item>
-                    <item name="label" xsi:type="string" translate="true">Pages</item>
-                </argument>
-            </action>
-        </referenceBlock>
 		<referenceContainer name="content">
             <block name="html-sitemap-general" template="Magefan_HtmlSitemap::general.phtml"/>
-			<block as="cms_page" class="Magefan\HtmlSitemap\Block\Cms\Pages" name="cms.page" template="Magefan_HtmlSitemap::cms/pages.phtml"/>
+			<block as="cms_page" class="Magefan\HtmlSitemap\Block\Cms\Pages" name="cms.page" template="Magefan_HtmlSitemap::links_template.phtml"/>
 		</referenceContainer>
 	</body>
 </page>
