--- a/view/frontend/templates/header_link.phtml
+++ b/view/frontend/templates/header_link.phtml
@@ -2,10 +2,14 @@
 /**
  * Copyright © Magefan (support@magefan.com). All rights reserved.
  * Please visit Magefan.com for license details (https://magefan.com/end-user-license-agreement).
+ *
+ * Glory to Ukraine! Glory to the heroes!
  */
 
-/** @var \Magefan\HtmlSitemap\Block\Link $block */
-/** @var \Magento\Framework\Escaper $escaper */
+/**
+ * @var \Magefan\HtmlSitemap\Block\Link $block
+ * @var \Magento\Framework\Escaper $escaper
+ */
 
 $openLinks = $block->getOpenLinks() == 1 ? '' : 'target="_blank"';
 ?>
