--- a/view/frontend/templates/category_tree.phtml
+++ b/view/frontend/templates/category_tree.phtml
@@ -2,10 +2,13 @@
 /**
  * Copyright © Magefan (support@magefan.com). All rights reserved.
  * Please visit Magefan.com for license details (https://magefan.com/end-user-license-agreement).
+ *
+ * Glory to Ukraine! Glory to the heroes!
  */
 
 /**
  * @var \Magefan\HtmlSitemap\Block\AbstractBlock $block
+ * @var \Magento\Framework\Escaper $escaper
  */
 
 $items = $block->getItems();
@@ -13,8 +16,8 @@ $items = $block->getItems();
 
 <?php if ($items && count($items)) { ?>
     <div class="sitemap-item-type sitemap-item-section">
-        <?php if ($this->showBlockTitle() && $block->getBlockTitle()) {?>
-            <h2 class="sitemap-title"><?= $block->escapeHtml(__($block->getBlockTitle())) ?></h2>
+        <?php if ($block->showBlockTitle() && $block->getBlockTitle()) {?>
+            <h2 class="sitemap-title"><?= $escaper->escapeHtml(__($block->getBlockTitle())) ?></h2>
         <?php } ?>
         <div class="widget block block-categories" data-bind="scope: 'categories'">
             <div class="accordion"  id="accordion-2">
@@ -35,8 +38,8 @@ $items = $block->getItems();
                         }
                     } ?>
                     <li>
-                        <a href="<?= $block->escapeUrl($item->getUrl()) ?>" title="<?= $block->escapeHtml($item->getName()) ?>">
-                            <?= $block->escapeHtml($item->getName()) ?>
+                        <a href="<?= $escaper->escapeUrl($item->getUrl()) ?>" title="<?= $escaper->escapeHtml($item->getName()) ?>">
+                            <?= $escaper->escapeHtml($item->getName()) ?>
                         </a>
                         <?php
                         $level = $newLevel;
@@ -48,8 +51,8 @@ $items = $block->getItems();
                 echo str_repeat('</li></ul>', $closedTags); ?>
             </div>
             <?php if ($block->showViewMore()): ?>
-                <a class="view-more" href="<?= $block->escapeUrl($block->getCurrentTypeHtmlSitemapUrl())?>" >
-                    <?= $block->escapeHtml(__('View more'))?>
+                <a class="view-more" href="<?= $escaper->escapeUrl($block->getCurrentTypeHtmlSitemapUrl())?>" >
+                    <?= $escaper->escapeHtml(__('View more'))?>
                 </a>
             <?php endif; ?>
         </div>
