--- a/view/frontend/templates/general.phtml
+++ b/view/frontend/templates/general.phtml
@@ -7,7 +7,8 @@
  */
 
 
-/** @var \Magento\Framework\Escaper $escaper
+/**
+ * @var \Magento\Framework\Escaper $escaper
  * @var $mfSecureRenderer \Magefan\Community\Api\SecureHtmlRendererInterface
  */
 ?>
