Code style improvemnets

--- a/view/frontend/templates/general.phtml
+++ b/view/frontend/templates/general.phtml
@@ -8,8 +8,9 @@
 
 
 /**
+ * @var \Magento\Framework\View\Element\Template $block
  * @var \Magento\Framework\Escaper $escaper
- * @var $mfSecureRenderer \Magefan\Community\Api\SecureHtmlRendererInterface
+ * @var \Magefan\Community\Api\SecureHtmlRendererInterface $mfSecureRenderer
  */
 ?>
 <div class="sitemap-search">
